@@ -200,6 +200,7 @@ triode: Pete Gamache <gamache@cpan.org>
 typester: Daisuke Murase <typester@cpan.org>
 uree: Oriol Soriano <oriol.soriano@capside.com>
 uwe: Uwe Voelker <uwe@uwevoelker.de>
+vanstyn: Henry Van Styn <vanstyn@cpan.org>
 victori: Victor Igumnov <victori@cpan.org>
 wdh: Will Hawes <wdhawes@gmail.com>
 wesm: Wes Malone <wes@mitsi.com>
