@@ -9,6 +9,9 @@ Revision history for DBIx::Class
         - Fix updating multiple CLOB/BLOB columns on Oracle
         - Fix exception on complex update/delete under a replicated setup
           http://lists.scsys.co.uk/pipermail/dbix-class/2015-January/011903.html
+        - Fix uninitialized warnings on empty hashes passed to join/prefetch
+          https://github.com/vanstyn/RapidApp/commit/6f41f6e48 and
+          http://lists.scsys.co.uk/pipermail/dbix-class/2015-February/011921.html
         - Fix hang in t/72pg.t when run against DBD::Pg 3.5.0. The ping()
           implementation changes due to RT#100648 made an alarm() based
           timeout lock-prone.
